fix contact spacing

--- a/static/style.css
+++ b/static/style.css
@@ -297,7 +297,7 @@ em { color: var(--pink); font-style: normal; }
   font-size: 14px;
   color: inherit;
   text-decoration: none;
-  margin-bottom: 10px;
+  margin-top: 5px;
   margin: 0;
   line-height: 1;
 }
